# rezepte.ttst.de

./: .dockerignore  .gitignore  .htaccess  Caddyfile  Cargo.toml  Dockerfile  README.md  angular.json  biome.json  craco.config.js  cspell.yml  deno.jsonc  index.html  logo.afdesign  nosupport.html  package-lock.json  package.json  rezept.html  rust-toolchain.toml  tsconfig.json
.recipes/: Burger mit Gemüsestäbchen.rezept.txt  Dinkelbaguette.rezept.txt  Frikadellen nach Jäger Art.rezept.txt  Griechischer Hack-Gemüse-Auflauf.rezept.txt  README.md  Straßburger Nudelauflauf.rezept.txt  Tortillas.rezept.txt  Vegetarische Gemüsepfanne.rezept.txt  Zwiebel-Sahne-Hähnchen.rezept.txt
RezeptToPDF/: FormMain.Designer.cs  FormMain.cs  PDFhelloWorld.cs  PdfSharpMarkdown.cs  Program.cs  RezeptToPDF.csproj  RezeptToPDF.sln
_REZEPTE_/: Backofensuppe.rezept.txt  Blumenkohlsuppe.rezept.txt  Burger mit Gemüsestäbchen.rezept.txt  Chicken Nuggets und Kartoffelspalten.rezept.txt  Dinkelbaguette.rezept.txt  Dinkelbrot.rezept.txt  Dinkelbrötchen.rezept.txt  Einfacher Gugelhupf.rezept.txt  Frikadellen nach Jäger Art.rezept.txt  Geschnetzeltes Züricher Art.rezept.txt  Granatapfelsalat.rezept.txt  Griechischer Hack-Gemüse-Auflauf.rezept.txt  Grüne Nudeln mit Champignonrahmsoße.rezept.txt  Gyros-Frikadellen in Metaxasoße.rezept.txt  Gyros-Nudelauflauf in Metaxasoße.rezept.txt  Gyrossuppe.rezept.txt  Pfannkuchen für Tia.rezept.txt  Pizza.rezept.txt  Putengulasch.rezept.txt  README.md  Saftiger Zitronenkuchen.rezept.txt  Schlichte Muffins.rezept.txt  Schmetterlingsnudeln mit Rahmchampignons.rezept.txt  Spaghetti Bolognese.rezept.txt  Stefans Nudelsalat.rezept.txt  Tassenpudding.rezept.txt  Tortillas.rezept.txt  Waffeln.rezept.txt  Wikingertopf.rezept.txt  Zwiebel-Sahne-Hähnchen.rezept.txt  _Preview.bat  _Rezeptliste.php
_recipes/: Asiatische Nudelpfanne.rezept.txt  Butterkuchen.rezept.txt  Grüne Nudeln mit Champignonrahmsoße.rezept.txt  Gyrossuppe.rezept.txt  README.md  Spaghetti Bolognese.rezept.txt  Waffeln.rezept.txt
edit/: Cargo.toml
edit/src/: main.rs
js/: checkie.js  darkmode.js  loadrecipe.js  recipesidebar.js  sidebar.js
logo/: logo.afdesign
pdf/: Cargo.toml
pdf/src/: ext.rs  font.rs  lib.rs  utils.rs
pdf/src/document/: footer.rs  ingredients.rs  mod.rs  preparation.rs
pdf/src/test/: Pizza.rs  mod.rs
public/: .htaccess  index.html  rezept.html
scripts/: build.docker.ts  meta.ts  postwasm.ts  (+3 more)
(+73 files in other folders)
