[package]
name = "rezepte-ttst-de-print-pdf"
version = "0.0.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]
path = "src/pdf/lib.rs"

[features]
default = ["console_error_panic_hook"]

[dependencies]
# newer versions fail on stdweb
wasm-bindgen = "=0.2.84"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
indexmap = { version = "2", features = ["serde"] }

genpdf = { version = "0.2", features = ["images"] }
pulldown-cmark = "0.10"
percent-encoding = "2"
fast_qr = { version = "0.12", features = ["image"] }
# needs to be the version that genpdf uses
image = "0.23.12"

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1", optional = true }

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
