[package]
name = "edit"
version = "1.0.1+1.2.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
notify = "6"
tokio = { version = "1", features = ["full"] }
warp = "0.3"
include_dir = { version = "0.7", features = ["glob"] }
percent-encoding = "2"
